# video-engine

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt  test_analysis.py  test_new_features.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  MCP_SERVER.md  PLUGINS.md
src/: __init__.py
src/analyzers/: __init__.py  analysis_workflow.py  face_detection.py  scene_detection.py  tag_templates.py  video_analyzer.py
src/database/: __init__.py  video_db.py
src/hooks/: __init__.py  manager.py
src/mcp/: __init__.py  server.py
src/plugins/: __init__.py  base.py  registry.py
src/utils/: __init__.py  video_io.py
